# delta-belief-rl

./: README.md  index.html  setup.py  train.py
delta_belief_rl/: pyproject.toml
delta_belief_rl/config/: base_multiturn.yaml
delta_belief_rl/env/customer_service/: generate_dataset.py  reward.py
delta_belief_rl/env/guess_my_city/: generate_dataset.py  reward.py
delta_belief_rl/env/murder_mystery/: generate_dataset.py  reward.py
delta_belief_rl/env/twenty_questions/: generate_dataset.py  generate_split.py  reward.py
delta_belief_rl/llm_agent/: belief.py  generation.py  prompts.py  tensor_helper.py
delta_belief_rl/scripts/: modal_setup.py  model_merger.py  slurm_setup.sh
delta_belief_rl/scripts/eval/: customer_service.sh  guess_my_city.sh  murder_mystery.sh  twenty_questions.sh
delta_belief_rl/scripts/train/delta-belief-rl/: qwen1.7b.sh  qwen4b.sh
delta_belief_rl/scripts/train/grpo/: qwen1.7b.sh  qwen4b.sh
delta_belief_rl/trainer/: metrics_utils.py  multistep_trainer.py
delta_belief_rl/trainer/ppo/: core_algos.py
delta_belief_rl/utils/: compiled_constants.py  format.py  lora_adapters.py  syntax.py  watchdog.py
delta_belief_rl/utils/dataset/: create_datasets.py  rl_dataset.py
delta_belief_rl/workers/: api_workers.py  fsdp_workers.py
delta_belief_rl/workers/actor/: __init__.py  dp_actor.py
delta_belief_rl/workers/rollout/: api_batch_processing.py  api_key.py
delta_belief_rl/workers/rollout/vllm_rollout/: __init__.py  vllm_rollout_spmd.py
delta_belief_rl/workers/sharding_manager/: fsdp_vllm.py
static/css/: style.css
(+82 files in other folders)
